fixed weird scrollbar issue where the scroll bar was present even when the content didn't require scrolling

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,6 @@
-html,
-body {
-  height: 100%;
-}
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 8px !important;
 }
 .navBar{
     margin: 0px;
